#1140 [FIX] CloseAppBar와 BackAppBar에 z-index 추가 (#1142)

--- a/src/shared/component/layout/CloseAppBar/CloseAppBar.module.css
+++ b/src/shared/component/layout/CloseAppBar/CloseAppBar.module.css
@@ -9,6 +9,7 @@
   font: var(--text-headline-1-bold);
   position: fixed;
   top: 0;
+  z-index: var(--z-index-appbar);
 }
 
 .close {
